kubernetes/mydata/navidrome/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: mydata
  name: navidrome-policy
specs:
  # TODO: deprecate
  # navidrome connection from ingress-nginx
  - endpointSelector: &self
      matchLabels:
        app.kubernetes.io/name: navidrome
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: ingress-nginx
              app.kubernetes.io/name: ingress-nginx
        toPorts:
          - ports:
              - protocol: TCP
                port: "4533"
  # allow connection from cilium ingress
  - endpointSelector: *self
    ingress:
      - fromEndpoints:
          - matchExpressions:
              - key: reserved:ingress
                operator: Exists
        toPorts:
          - ports:
              - protocol: TCP
                port: "4533"
